# Docs

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .vale.ini  .yamllint  404.html  CNAME  CONTRIBUTING.md  DEPLOY.sh  LICENSE  README.md  RELEASE.md  architecture.html  forum.html  getting-started  index.html  mkdocs.yml  pyproject.toml  redirects.yml  release-notes.html  requirements.txt  sitemap.xml  transfer-release.sh
.github/workflows/: docs-quality.yml  docs.yml  markdown-lint.yml  pages.yml  preview.yml
app-develop/: component  publishing-applications  using-python
app-development/: component.html  index.html  publishing-applications.html  using-python.html
data/: old_urls.txt
de/: architecture.html  forum.html  index.html  release-notes.html
de/learn/: index.html
docs/: README.md  index.md
installation/: configuration.html
learn/: index.html
overrides/: main.html
overview/: getting-started.html  index.html
scripts/: build_i18n.sh  clean_repo.sh  optimize_images.sh
search/: search_index.json
tools/: anchors_autofix.py  anchors_doctor.py  anchors_legacy_inject.py  apply_legacy_anchors.py  audit_unused_assets.py  build_redirects.py  docs_doctor.py  fix_image_paths.py  fix_nav.py  glossary.yaml  normalize_links.py  po_to_md.py  strip_br_app_dev.py  translate_docs.py
tutorials/: 01-basic-setup.html  02-data-flow.html  03-workflow.html  index.html
ui/: buttons
user-interface/: access.html  applications.html  extensions.html  file-storage.html  home.html  index.html  localizations.html  maintenance.html
(+1319 files in other folders)
